err/hikikomori.err
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/alembic'...
Listing './lib/python3.5/site-packages/alembic/autogenerate'...
Listing './lib/python3.5/site-packages/alembic/ddl'...
Listing './lib/python3.5/site-packages/alembic/operations'...
Listing './lib/python3.5/site-packages/alembic/runtime'...
Listing './lib/python3.5/site-packages/alembic/script'...
Listing './lib/python3.5/site-packages/alembic/templates'...
Listing './lib/python3.5/site-packages/alembic/templates/generic'...
Listing './lib/python3.5/site-packages/alembic/templates/multidb'...
Listing './lib/python3.5/site-packages/alembic/templates/pylons'...
Listing './lib/python3.5/site-packages/alembic/testing'...
Listing './lib/python3.5/site-packages/alembic/testing/plugin'...
Listing './lib/python3.5/site-packages/alembic/util'...
Listing './lib/python3.5/site-packages/alembic-0.9.6.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/daemon'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/hikikomori'...
Listing './lib/python3.5/site-packages/hikikomori-0.0.0.dev1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/libearth'...
Listing './lib/python3.5/site-packages/libearth/compat'...
Listing './lib/python3.5/site-packages/libearth/parser'...
Listing './lib/python3.5/site-packages/libearth-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_daemon-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_editor-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/transmissionrpc'...
Listing './lib/python3.5/site-packages/transmissionrpc-0.11.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
